vault client now manages encryption of storage before uploading it
