# packages/cloud-vault-server/src/spec/openapi.yaml
@@ -176,7 +176,7 @@ paths:
                 allOf:
                   - $ref: '#/components/schemas/EncryptedStorage'
                   - required:
-                      - storage
+                      - ciphertext
                       - timestamp
         default:
           description: error
@@ -244,16 +244,16 @@ components:
       title: Cloud-Vault-Server Well-Known Configuration
       required:
         - name
-        - registration-configuration
-        - vault-configuration
+        - registration_configuration
+        - vault_configuration
       properties:
         name:
           type: string
         description:
           type: string
-        registration-configuration:
+        registration_configuration:
           $ref: '#/components/schemas/RegistrationConfiguration'
-        vault-configuration:
+        vault_configuration:
           type: object
           required:
             - v2
@@ -266,10 +266,10 @@ components:
       type: object
       title: Registration Endpoints
       required:
-        - public-jwk_endpoint
+        - public_jwk_endpoint
         - registration_endpoint
       properties:
-        public-jwk_endpoint:
+        public_jwk_endpoint:
           type: string
           example: /api/v2/registration/public-jwk
         registration_endpoint:
@@ -315,7 +315,8 @@ components:
         - timestamp_endpoint
         - token_endpoint
         - token_endpoint_auth_methods_supported
-        - key-derivation
+        - enc_algorithm
+        - key_derivation
       properties:
         id:
           type: string
@@ -357,7 +358,7 @@ components:
               - private_key_jwt
           example:
             - client_secret_post
-        key-derivation:
+        key_derivation:
           type: object
           required:
             - master
@@ -367,7 +368,18 @@ components:
             master:
               $ref: '#/components/schemas/KeyDerivationOptions'
             enc:
-              $ref: '#/components/schemas/KeyDerivationOptions'
+              allOf:
+                - $ref: '#/components/schemas/KeyDerivationOptions'
+                - type: object
+                  required:
+                    - enc_algorithm
+                  properties:
+                    enc_algorithm:
+                      type: string
+                      enum:
+                        - aes-192-gcm
+                        - aes-256-gcm
+                      example: aes-256-gcm
             auth:
               $ref: '#/components/schemas/KeyDerivationOptions'
     ScryptOptions:
@@ -393,18 +405,18 @@ components:
       type: object
       required:
         - alg
-        - derivedKeyLength
+        - derived_key_length
         - input
-        - saltPattern
-        - saltHashingAlgorithm
-        - algOptions
+        - salt_pattern
+        - salt_hashing_algorithm
+        - alg_options
       properties:
         alg:
           type: string
           enum:
             - scrypt
           default: scrypt
-        derivedKeyLength:
+        derived_key_length:
           type: integer
           description: Desired key length in bytes
         input:
@@ -413,7 +425,7 @@ components:
             - password
             - master-key
           example: password
-        saltPattern:
+        salt_pattern:
           description: >
             Describes the salt pattern to use when deriving the key from a
             password. It is a UTF-8 string, where variables to replace wrapped
@@ -427,7 +439,7 @@ components:
             before being used (see saltHashingAlgorithm)
           type: string
           example: master9u8tHv8_s-QsG8CxuAefhg{username}
-        saltHashingAlgorithm:
+        salt_hashing_algorithm:
           description: >
             Since salts are length contrained, and saltPattern creates salts
             with an arbitrary length, the input salt is hashed with the provided
@@ -438,7 +450,7 @@ components:
             - sha3-384
             - sha3-512
           example: sha3-512
-        algOptions:
+        alg_options:
           oneOf:
             - $ref: '#/components/schemas/ScryptOptions'
     ApiError:
@@ -638,13 +650,13 @@ components:
         EncryptedStorage is the JSON obejct representing the storage of
         registered users in the cloud vault
       required:
-        - jwe
+        - ciphertext
       properties:
-        jwe:
+        ciphertext:
           type: string
-          pattern: ^[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]*){4}$
+          pattern: ^[a-zA-Z0-9_-]+$
           description: |
-            A JWE containing the encrypted storage
+            The encrypted storage in base64url encoding
         timestamp:
           type: number
           description: >-
